'content: none' behaves like 'content: normal' in ::marker instead of destroying it
Categories
(Core :: Layout: Generated Content, Lists, and Counters, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox91 | --- | fixed |
People
(Reporter: Oriol, Assigned: MatsPalmgren_bugz)
References
(Blocks 2 open bugs)
Details
(Keywords: dev-doc-needed)
Attachments
(1 file)
From https://drafts.csswg.org/css-lists/#content-property,
content
on the::marker
itself is notnormal
The contents of the marker box are determined as defined by the content property, exactly as for::before
.
From https://drafts.csswg.org/css-content-3/#valdef-content-none
On pseudo-elements it inhibits the creation of the pseudo-element as if it had
display: none
.
Well, display
doesn't apply to ::marker, but the first part of the sentence seems clear that no marker box should be generated.
However, in Firefox it behaves just like content: normal
.
In Chromium I have the same problem since both normal
and none
are stored as nullptr.
Comment 1•6 years ago
|
||
Yeah, we have the exact same issue, basically, which was long-standing since before our style system rewrite:
document.body.style.content = "normal"
"normal"
getComputedStyle(document.body).content
"none"
Because both are stored as an empty array.
Here is where this distinction is lost.
Comment 2•6 years ago
|
||
The refactoring in bug 1605803 will allow to fix this trivially.
Updated•6 years ago
|
Comment 3•6 years ago
|
||
MDN probably needs to be updated for content:none / content:normal on ::marker when this is fixed, too.
devdoc-needed?
Reporter | ||
Comment 4•6 years ago
|
||
BTW, I added some WPT tests about this:
- css/css-pseudo/marker-computed-content.html
- css/css-pseudo/marker-computed-size.html
- css/css-pseudo/marker-content-019.html
Comment 6•6 years ago
|
||
(And sorry, I'm a bit swamped with other things atm)
Reporter | ||
Comment 7•6 years ago
|
||
Since this has not been fixed, I would assume content:none behaves exactly as content:normal
But then why is this test failing in Firefox? https://wpt.fyi/results/css/css-pseudo/marker-content-020.html
It seems some pixels are different (though I can't detect it if I disable highlight diff)
https://wpt.fyi/analyzer?screenshot=sha1%3A88511f75bca2f25537d7d5d1bb8d4ac6686bdb2c&screenshot=sha1%3Aabfd224f3e20313ee8a6c04c0e45abbc0bf89d0e
Assignee | ||
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:mats, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 12•4 years ago
|
||
Comment 13•4 years ago
|
||
Comment 14•4 years ago
|
||
bugherder |
Description
•