Bug 1605473 - Implement 'content: none' for ::marker.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D111707